2012-06-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/lib/z180/Makefile.in,
	  device/lib/incl.mk,
	  device/lib/r3ka/Makefile.in,
	  device/lib/gbz80/Makefile.in,
	  device/lib/s08/Makefile.in,
	  device/lib/r2k/Makefile.in,
	  device/lib/hc08/Makefile.in,
	  device/lib/z180/strcpy.s
	  device/lib/r3ka/strcpy.s
	  device/lib/z80/strcpy.s
	  device/lib/r2k/strcpy.s:
	  Use ldi for strcpy().

2012-06-27 Borut Razem <borut.razem AT gmail.com>

	* src/SDCC.lex: unescape file names from preprocessor, 2nd try

2012-06-26 Borut Razem <borut.razem AT gmail.com>

	* src/SDCC.lex, src/SDCCerr.c, src/SDCCerr.h:
	  unescape file names from preprocessor

2012-06-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Use xor to zero the accumulator in a few more places.

2012-06-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Improve memset() for small sizes, RFE #3537534.

2012-06-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc:
	  Improve handling of hl in additions with on-stack param operands.

2012-06-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/lib/z180/shift.s,
	  device/lib/r3ka/shift.s,
	  device/lib/z80/shift.s,
	  device/lib/gbz80/shift.s,
	  device/lib/r2k/shift.s,
	  src/port.h,
	  src/z80/gen.c,
	  src/z80/main.c,
	  device/lib/z180/Makefile.in,
	  device/lib/z180/stubs.s,
	  device/lib/r3ka/Makefile.in,
	  device/lib/r3ka/stubs.s,
	  device/lib/z80/Makefile.in,
	  device/lib/z80/stubs.s,
	  device/lib/gbz80/stubs.s,
	  device/lib/gbz80/Makefile.in,
	  device/lib/r2k/Makefile.in,
	  device/lib/r2k/stubs.s:
	  Code generation instead of support calls for all shifts.

2012-06-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Better cost estimation for loading parameters into pairs,
	  more efficient loading from stack into iy for Rabbits.
